...
  {
    title: "Activity",
    url: "/activity",
    icon: Activity,
  },
  {
    title: "Inventory",
    url: "/inventory",
    icon: Wine,
  },
  {
    title: "Buy List",
    url: "/buy-list",
...
    <Sidebar>
      <SidebarHeader>
        <SidebarMenu>
          <SidebarMenuItem>
            <SidebarMenuButton size="lg" render={<Link href="/cellar" />}>
              {/* eslint-disable-next-line @next/next/no-img-element */}
              <img src="/logo.png" alt="Cellar Door" className="h-9 w-auto rounded-lg" />
              <span className="text-xl font-bold">Cellar Door</span>
            </SidebarMenuButton>
          </SidebarMenuItem>
        </SidebarMenu>
      </SidebarHeader>

...
